Use of Lombok Library for Logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+logging.file.name=application.log
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.bridgelabz=DEBUG
+
+# Logging Pattern for the console and file
+logging.pattern.console=%d{yyyy-MM-dd HH:ss:SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
