--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,19 @@ server.port=8081
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service
-spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
-spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
-spring.jpa.hibernate.ddl-auto=update
+ spring.datasource.username=root
+ spring.datasource.password=Resh@308
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+logging.file.name=application.log
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.bridgelabz=DEBUG
+
 # Logging Pattern for the console and file
 logging.pattern.console=%d{yyyy-MM-dd HH:ss:SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
