--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,7 @@ logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=ERROR
 logging.level.com.bridgelabz=DEBUG
 
+spring.profiles.active=dev
+environment=COMMON
 # Logging Pattern for the console and file
 logging.pattern.console=%d{yyyy-MM-dd HH:ss:SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
